feat: add Havins field to Austin pilot
